tests/ui/async-await/track-caller/async-block.afn.stderr
error[E0658]: `#[track_caller]` on closures is currently unstable
  --> $DIR/async-block.rs:8:13
   |
LL |     let _ = #[track_caller] async {
   |             ^^^^^^^^^^^^^^^
   |
   = note: see issue #87417 <https://github.com/rust-lang/rust/issues/87417> for more information
   = help: add `#![feature(closure_track_caller)]` to the crate attributes to enable

error[E0658]: `#[track_caller]` on closures is currently unstable
  --> $DIR/async-block.rs:15:13
   |
LL |     let _ = #[track_caller] async {
   |             ^^^^^^^^^^^^^^^
   |
   = note: see issue #87417 <https://github.com/rust-lang/rust/issues/87417> for more information
   = help: add `#![feature(closure_track_caller)]` to the crate attributes to enable

error[E0658]: `#[track_caller]` on closures is currently unstable
  --> $DIR/async-block.rs:23:17
   |
LL |         let _ = #[track_caller] async {
   |                 ^^^^^^^^^^^^^^^
   |
   = note: see issue #87417 <https://github.com/rust-lang/rust/issues/87417> for more information
   = help: add `#![feature(closure_track_caller)]` to the crate attributes to enable

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
